--- a/JabariNgeno_gradebook.html
+++ b/JabariNgeno_gradebook.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content='width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gradebook</title>
     <style>
       table{
-          width: 100%,
+          width: 100%;
           border-collapse: collapse;
       }
       th,td{
@@ -32,7 +32,7 @@
          <!-- Add more assignment columns as needed -->
     </tr>
 </thead>  
-<tbody>
+ <tbody>
     <!-- Rows will be populated dynamically with JavaScript --> 
     
 </tbody>
